# rkllm_api_bundle

./: .gitignore  README-VIE.md  README.md  client.py  pyproject.toml  rkllm.py  server.py  start_server.sh  utils.py  web_client.py
static/css/: style.css
static/js/: script.js
templates/: index.html  index.html.bak  index.html.bak2
